docker/emptydir.yaml
apiVersion: v1
kind: Pod
metadata:
        name: ubuntu
spec:
        containers:
                - image: ubuntu
                  command:
                        - sleep
                        - "3600"
                  imagePullPolicy: IfNotPresent
                  name: ubuntu
                  volumeMounts:
                        - mountPath: /data-mount
                          name: data
        volumes:
                - name: data
                  emptyDir: {}
