docker/pod.yaml
apiVersion: v1
kind: Pod
metadata:
        name: my-first-pod
spec:
        containers:
        - name: my-nginx
          image: nginx
        - name: my-centos
          image: centos
          command: ["/bin/sh", "-c", "while : ;do curl http://localhost:80/; sleep 3; done"]
