docker/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
 name: test-ingress
spec:
 backend:
  serviceName: service-pod
  servicePort: 80
